# NAVEM-library

./: .gitignore  CITATION.cff  README.md  prepend_license.sh  pyproject.toml  requirements.txt
TrainedModels/: dictionary.txt
TrainedModels/B-NAVEM/: dictionary.txt
TrainedModels/H-NAVEM/: dictionary.txt
TrainedModels/NAVEM/: dictionary.txt
TrainedModels/P-NAVEM/: dictionary.txt
TrainedModels/quad/: dictionary.txt  loss.csv  nn_function_weights.weights.h5  nn_weights.weights.h5  program.prof
TrainingDataset/Non-Convex-Mesh-3474/: Cell0Ds.csv  Cell2Ds.csv
TrainingDataset/RandomConcaveQuadrilateral/: Cell0Ds.csv  Cell1Ds.csv
TrainingDataset/RandomConvexQuadrilateral/: Cell0DNeighbours.csv  Cell0DUpdatedCells.csv  Cell0Ds.csv  Cell1DNeighbours.csv  Cell1Ds.csv  Cell2DNeighbours.csv  Cell2DSubDivisions.csv  Cell2DUpdatedCells.csv  Cell2Ds.csv
TrainingDataset/TrainingReferenceSquare/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
TrainingDataset/TrainingVoro_4/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
TrainingDataset/TrainingVoro_5/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
TrainingDataset/TrainingVoro_6/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
examples/: convergence_test.py  convergence_test_pcc_2d.py  main_elliptic_pcc_2d.py  training_generic_pcc_2d.py  visualize_basis_functions_pcc_2d.py
examples/Export/: program.prof
test/: dictionary.txt  test_enforcing_boundary_functions.py  test_evaluate_network_performance_and_correctness.py  test_geometry_utilities.py  test_laplace_solver.py  test_navem_polygon.py  test_points_generator.py  test_polygon_generators.py
(+313 files in other folders)
